[gd_scene load_steps=11 format=2]

[ext_resource path="res://HTTPClientExample/Client.gd" type="Script" id=1]
[ext_resource path="res://HTTPClientExample/Canvas.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Theme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/ZenKurenaido-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.00784314, 0.854902, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.168627, 0.478431, 0.101961, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 1, 0.156863, 1 )

[sub_resource type="DynamicFont" id=1]
size = 15
outline_size = 1
outline_color = Color( 0, 0.513726, 0.0941176, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 1 )
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = SubResource( 5 )

[node name="Client" type="Panel"]
margin_right = 475.0
margin_bottom = 39.0
mouse_filter = 1
theme = ExtResource( 3 )
custom_styles/panel = SubResource( 7 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
use_ssl = true

[node name="Canvas" parent="." instance=ExtResource( 2 )]
position = Vector2( 600, 450 )
z_as_relative = false

[node name="MarginContainer" type="CenterContainer" parent="."]
margin_left = 3.0
margin_top = -1.0
margin_right = 484.0
margin_bottom = 23.0
rect_min_size = Vector2( 0, 24 )
mouse_filter = 1
theme = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 9.0
margin_right = 471.0
margin_bottom = 33.0
rect_min_size = Vector2( 385, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmbeddingGeneration" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 462.0
margin_bottom = 33.0
rect_min_size = Vector2( 385, 0 )
alignment = 1

[node name="Prompt" type="LineEdit" parent="MarginContainer/VBoxContainer/EmbeddingGeneration"]
margin_right = 200.0
margin_bottom = 33.0
rect_min_size = Vector2( 200, 24 )
text = "Rose on Fire"
max_length = 100
caret_blink = true
caret_blink_speed = 0.5

[node name="Start" type="LineEdit" parent="MarginContainer/VBoxContainer/EmbeddingGeneration"]
margin_left = 204.0
margin_right = 262.0
margin_bottom = 33.0
text = "10"
align = 2

[node name="More" type="LineEdit" parent="MarginContainer/VBoxContainer/EmbeddingGeneration"]
margin_left = 266.0
margin_right = 324.0
margin_bottom = 33.0
text = "10"
align = 2

[node name="GenerateEmbeddings" type="Button" parent="MarginContainer/VBoxContainer/EmbeddingGeneration"]
margin_left = 328.0
margin_right = 462.0
margin_bottom = 33.0
text = "Generate Embeddings"

[node name="Group" type="Node2D" parent="."]

[connection signal="fireaway" from="Canvas" to="." method="_on_Canvas_fireaway"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/EmbeddingGeneration/GenerateEmbeddings" to="." method="_on_GenerateEmbeddings_pressed"]
